--- a/docker-test-3/Dockerfile
+++ b/docker-test-3/Dockerfile
@@ -1,5 +1,7 @@
 #####################################################################
-# Expect stage-2 to be missing (it's not just node:alpine)
+# trailing newline
+# Expect all to be updated
+# result - last FROM ignored, alias missing from first FROM
 #####################################################################
 FROM debian:wheezy as stage-1
 
