--- a/docker-test-5/Dockerfile
+++ b/docker-test-5/Dockerfile
@@ -1,9 +1,9 @@
 #####################################################################
+# less than 3 FROM statements
+# Expect all to be updated
+# result - last FROM ignored
+#####################################################################
 FROM node:alpine as stage-1
 
 #####################################################################
-FROM node:alpine as stage-2
-
-#####################################################################
 FROM node:alpine
-#####################################################################
