update test files

--- a/docker-test-7/Dockerfile
+++ b/docker-test-7/Dockerfile
@@ -1,5 +1,7 @@
 #####################################################################
-#
+# 3 FROM statements, no alias for middle FROM
+# Expect all to be updated
+# result - Alais removed from first FROM, other FROM statements ignored
 #####################################################################
 FROM node:alpine as stage-1
 
