--- a/docker-test-6/Dockerfile
+++ b/docker-test-6/Dockerfile
@@ -1,6 +1,12 @@
 #####################################################################
-FROM node:alpine as stage-1
+# 3 FROM statements, no alias for middle FROM
+# Expect all to be updated
+# result - Alais removed from first FROM, other FROM statements ignored
+#####################################################################
+FROM debian:wheezy as stage-1
 
 #####################################################################
 FROM node:alpine
+
 #####################################################################
+FROM node:alpine as stage-2
