update test files

--- a/docker-test-10/Dockerfile
+++ b/docker-test-10/Dockerfile
@@ -1,12 +1,13 @@
 
 #####################################################################
 FROM debian:wheezy
-
 #####################################################################
 FROM debian:wheezy
-
 #####################################################################
 FROM node:alpine
-
+#####################################################################
+FROM node:alpine
+#####################################################################
+FROM debian:wheezy
 #####################################################################
 FROM node:alpine
