--- a/docker-test-10/Dockerfile
+++ b/docker-test-10/Dockerfile
@@ -7,4 +7,7 @@ FROM debian:wheezy
 FROM node:alpine
 #####################################################################
 FROM node:alpine
-
+#####################################################################
+FROM debian:wheezy
+#####################################################################
+FROM node:alpine
