--- a/docker-test-11/Dockerfile
+++ b/docker-test-11/Dockerfile
@@ -1,13 +1,10 @@
 
 #####################################################################
-FROM debian:wheezy
+FROM debian:wheezy as test-1
 #####################################################################
 FROM debian:wheezy
 #####################################################################
-FROM node:alpine
+FROM node:alpine as test-2
 #####################################################################
 FROM node:alpine
 #####################################################################
-FROM debian:wheezy
-#####################################################################
-FROM node:alpine
